RESOLVED FIXED 202876
requestIdleCallback cannot be enabled in DumpRenderTree on Windows
https://bugs.webkit.org/show_bug.cgi?id=202876
Summary requestIdleCallback cannot be enabled in DumpRenderTree on Windows
Ryosuke Niwa
Reported 2019-10-11 20:38:06 PDT
requestIdleCallback is not enabled in DumpRenderTree on Windows
Attachments
Fixes DRT on Windows (6.33 KB, patch)
2019-10-11 20:40 PDT, Ryosuke Niwa
no flags
Fixed a typo. (6.33 KB, patch)
2019-10-11 22:46 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2019-10-11 20:40:05 PDT
Created attachment 380814 [details] Fixes DRT on Windows
Wenson Hsieh
Comment 2 2019-10-11 21:31:19 PDT
Comment on attachment 380814 [details] Fixes DRT on Windows View in context: https://bugs.webkit.org/attachment.cgi?id=380814&action=review r=mews > Source/WebKitLegacy/win/WebPreferenceKeysPrivate.h:215 > +#define WebKitRequestIdleCallbackEnabledPreferenceKey "RequestIdleCallbackEnabled" Nit - it seems most of the other strings defined in this file are “WebKit*”. Should this match that convention?
Ryosuke Niwa
Comment 3 2019-10-11 22:46:38 PDT
Created attachment 380819 [details] Fixed a typo.
Ryosuke Niwa
Comment 4 2019-10-11 22:49:40 PDT
Comment on attachment 380819 [details] Fixed a typo. Wait for Windows EWS.
Ryosuke Niwa
Comment 5 2019-10-12 02:16:41 PDT
Comment on attachment 380819 [details] Fixed a typo. Clearing flags on attachment: 380819 Committed r251046: <https://trac.webkit.org/changeset/251046>
Ryosuke Niwa
Comment 6 2019-10-12 02:16:42 PDT
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 7 2019-10-12 02:19:30 PDT
Ling Ho
Comment 8 2019-10-15 14:49:24 PDT
Note You need to log in before you can comment on or make changes to this bug.