Source/WebKitLegacy/win: requestIdleCallback is not enabled in DumpRenderTree on Windows https://bugs.webkit.org/show_bug.cgi?id=202876

Reviewed by Wenson Hsieh.

Added the missing plumbing to enable requestIdleCallback.

* Interfaces/IWebPreferencesPrivate.idl:
* WebPreferenceKeysPrivate.h:
* WebPreferences.cpp:
(WebPreferences::initializeDefaultSettings):
(WebPreferences::requestIdleCallbackEnabled):
(WebPreferences::setRequestIdleCallbackEnabled):
* WebPreferences.h:
* WebView.cpp:
(WebView::notifyPreferencesChanged):

Tools:
requestIdleCallback cannot be enabled in DumpRenderTree on Windows
https://bugs.webkit.org/show_bug.cgi?id=202876

Reviewed by Wenson Hsieh.

Added the missing plumbing for Windows port.

* DumpRenderTree/win/DumpRenderTree.cpp:
(setWebPreferencesForTestOptions):


Canonical link: https://commits.webkit.org/216336@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251046 268f45cc-cd09-0410-ab3c-d52691b4dbfc