Source/WebKitLegacy/win/WebPreferences.h
@@ -289,6 +289,8 @@ public:
     virtual HRESULT STDMETHODCALLTYPE setResizeObserverEnabled(BOOL);
     virtual HRESULT STDMETHODCALLTYPE coreMathMLEnabled(_Out_ BOOL*);
     virtual HRESULT STDMETHODCALLTYPE setCoreMathMLEnabled(BOOL);
+    virtual HRESULT STDMETHODCALLTYPE requestIdleCallbackEnabled(_Out_ BOOL*);
+    virtual HRESULT STDMETHODCALLTYPE setRequestIdleCallbackEnabled(BOOL);
 
     // WebPreferences
 
